style.css
html {
    height: 100%;
}

body {
    font-family: "arial black";
    background-color: #fff;
    margin: 0px;
    height: 100%;
}

.section {
    height: 100%;
    /*min-height: 600px;*/
    position: relative;
    background-color: blue;


}

.view {
    position: absolute;
    top: 6.5%;
    height: 100%;
    /*position: inherit;*/

    width: 75%;
    left: 50%;
    transform: translate(-50%);
}

.home, #home {
    background-color: #060e17;
    color: white;
    text-align: center;
}
.title {
    font-size: 30px;
    position:  absolute;
    left: 50%;
    top: 43.5%;
    transform: translate(-50%, -50%);
    border-bottom: 4px solid #fff;
    border-top: 4px solid #fff;
}

.about, #about {
    background-color: #fff;
    color: black;
}
.info {
    font-family: "arial";
    font-size: 20px;
    position:  relative;
    left: 50%;
    top: 43.5%;
    transform: translate(-50%, -50%);
}

.projects, #projects {
    background-color: #060e17;
}
.boxes {
    position:  relative;
    left: 50%;
    top: 10%;
    transform: translate(-50%, -43.5%);

}

.box-25 {
    margin: 1em;
    float: left;
    height: 225px;
    width: 225px;
    background-size: cover;
    border: 1px solid #fff;
    border-radius: 20px;
}

.sos {
    background-image: url(sosLogo.png);
}

.fare {
    background-image: url(whatsmyfareLogo.png);
}
.weather {
    background-image: url(weatherLogo.png);
}

.contact, #contact {
    background-color: #fff;
}
.contactme {
    font-size: 70px;
    position:  absolute;
    left: 50%;
    top: 35%;
    transform: translate(-50%, -50%);
}

.icons {

    position:  absolute;;
    left: 50%;
    top: 55%;
    transform: translate(-50%, -50%);

}
.icons i {
    font-size: 70px;
    float: left;
    color: black;
    padding: 0px 30px;

}
.icons i:hover {
    font-size: 80px;
}
.icons i:active {
    color: gray;
}




/*Top Menu Bar:*/
a {
    color: white;
    text-decoration: none;
}
.selected {
    background-color: #fff;
    color: #060e17;
}

.menu ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: #060e17;
    position: fixed;
    top: 0;
    width: 100%;
    height: 6.5%;
    min-height: 50px;
    text-align: center;
}

.menu li {
    /*float: left;*/
    display: inline;
}

@media screen and (max-width: 600px){
    .menu ul li.right,
    .menu ul li {float: none;}
    .sub_menu ul li.right,
    .sub_menu ul li {float: none;}
}

.menu li a {
    text-align: center;
    padding: 14px 5%;
    text-decoration: none;
    display: inline-block;
}

.menu li a:hover {
    background-color: #fff;
    color: #060e17;
}

